splash overflow bug fix with padding at bottom and reserve calendar font smaller

--- a/frontend/src/components/Card/Card.css
+++ b/frontend/src/components/Card/Card.css
@@ -334,7 +334,7 @@
     justify-content: center;
     /* color: red; */
     align-items: center;
-    font-size: x-large;
+    font-size: large;
     /* border-style: double; */
     background-color: #FF5A5F;
     border-radius: 1rem;
