--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,7 +11,8 @@
 }
 
 #content-wrap {
-  padding-bottom: 3.5rem;    /* Footer height */
+  padding-bottom: 3.5rem;
+  /* margin-bottom: 3.5rem; */
 }
 
 button:hover {
@@ -43,6 +44,7 @@ button:hover {
     justify-content: center;
     overflow-y: auto;
     padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
 
     /* overflow: hidden; */
     /* background-color: blue; */
